-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 2.1.0.0-incubating
-
Component/s: Resource Manager
-
Labels:None
When segment resource manager finds master resource manager is not available, it should switch to standby server, however, when the standby server cannot be resolved, it does not switch back to original master server side. And it also should avoid switching to standby if there is no standby which is set as value 'none'.
- links to