HAWQ-1258. segment resource manager does not switch back when it cannot resolve standby host name